--- a/texgen.info.yml
+++ b/texgen.info.yml
@@ -2,5 +2,6 @@ name: LaTeX Generator
 description: Generates sources for a LaTeX document with several options
 package: Custom
 type: module
-version: 8.x-1.0
+version: 8.x-1.1
 core: 8.x
+core_version_requirement: ^8 || ^9
